<resources>
    <string name="app_name">CRUD People</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="zip_code">Zip Code:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="edit">Edit</string>
    <string name="scheme">crudpeople</string>
    <string name="form_title">Person Form</string>
    <string name="name">Name: </string>
    <string name="preference_key">prefs</string>
    <string name="people_key">people</string>
    <string name="person_added">Person added.</string>
    <string name="person_edited">Person updated.</string>
    <string name="person_deleted">Person deleted.</string>
    <string name="delete">Delete</string>
</resources>